**Create Product Part-3**
