# E-Com/org/apps/product-service/src/routes/product.router.ts
@@ -1,5 +1,5 @@
 import express,{ Router } from "express";
-import { creatDiscountCodes, deleteDiscountCode, getCategories, getDiscountCodes } from "../controllers/product.controller";
+import { creatDiscountCodes, createProduct, deleteDiscountCode, deleteProductImage, getCategories, getDiscountCodes, getShopProducts, uploadProductImage } from "../controllers/product.controller";
 import isAuthenticated from "@packages/middleware/isAuthenticated";
 
 const router: Router = express.Router();
@@ -8,6 +8,9 @@ router.get("/get-categories", getCategories)
 router.post("/create-discount-code",isAuthenticated,creatDiscountCodes)
 router.delete("/delete-discount-code/:id",isAuthenticated,deleteDiscountCode)
 router.get("/get-discount-codes",isAuthenticated,getDiscountCodes)
-
+router.post("/upload-product-image",isAuthenticated,uploadProductImage)
+router.delete("/delete-product-image/:fileId",isAuthenticated,deleteProductImage)
+router.post("/create-product",isAuthenticated,createProduct)
+router.get("/get-shop-products",isAuthenticated,getShopProducts)
 
 export default router;
